@@ -1,7 +1,9 @@
-Changes in QMPlay2 build 16.05.28:
+Changes in QMPlay2 build 16.05.31:
 	- diplaying and filtering all planar 8-bit YUV pixel formats (only OpenGL2 and QPainter video outputs)
+	- allow to display only file names in playlist,
 	- update Russian translation (victorr2007),
 	- allow to detach from receiving commands,
+	- allow to remember the repeat mode,
 	- minor fixes in FPS and A/V sync,
 	- support video size changes,
 	- fix "rawvideo" playback,
